--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto Redes Socias</title>
     <link rel="stylesheet" href="estilo/style.css">
-    
 </head>
 <body>
-    <h1>Olá mundo</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
     
 </body>
 </html>
